Whitespace issue

--- a/css/code.css
+++ b/css/code.css
@@ -17,10 +17,9 @@ pre code {
 }
 
 code {
-  background-color: #F8F8F8; 
-  border: 1px solid #EAEAEA; 
+  background: #2D3339;
+  color: #ddd;
   border-radius: 3px;
-  box-shadow: inset 0 0 1px 0 #222;
   padding: 0 5px;
 }
 
